Update basic domain association file

--- a/domain_assoc.yml
+++ b/domain_assoc.yml
@@ -12,3 +12,8 @@ domains:
   github:
     - help.github
     - github
+  python:
+    - python
+    - docs.python
+    - packaging.python
+    - pypi
